--- a/src/main/resources/assets/frontend/sprints/existingSprint.html
+++ b/src/main/resources/assets/frontend/sprints/existingSprint.html
@@ -221,7 +221,7 @@ $(".nav-tabs li").eq(5).removeClass("active");
           <div class="panel-heading">
             <h3 class="panel-title"><strong>Sprint Participants </strong></h3>
           </div>
-          <div class="panel-body ">
+          <div class="panel-body">
             <table class="table table-hover" id="dev-table">
               <thead>
                 <tr>
@@ -232,7 +232,8 @@ $(".nav-tabs li").eq(5).removeClass("active");
               <tbody>
                 <tr ng-repeat="participant in sprintParticipants"  ng-click="manageSprintParticipants(sprint)" >
                   <td >
-                    <span ng-model="letterLimit" class="avatar" alt="datta" data-toggle="tooltip" data-placement="top" data-container="body" style="background-color: #29516D; width: 28px; height: 26px; font-size: 12px; padding-top: 5px; margin-right: 3px" data-original-title={{participant.personName }}> {{ participant.personName | limitTo:2 | uppercase }}<md-tooltip ng-hide="project.projectStartDate" md-direction="right"> {{ participant.personName }}</md-tooltip></span> {{ participant.personName}}
+                    <span ng-model="letterLimit" class="avatar" alt="datta" data-toggle="tooltip" data-placement="top" data-container="body" style="background-color: #29516D; width: 28px; height: 26px; font-size: 12px; padding-top: 5px; margin-right: 3px" data-original-title={{participant.personName }}> {{ participant.personName | limitTo:2 | uppercase }}<md-tooltip ng-hide="project.projectStartDate" md-direction="right"> {{ participant.personName }}</md-tooltip></span>
+                    {{ participant.personName}}
                   </td>
                   <td>{{participant.roleName}}</td>
                 </tr>
@@ -244,6 +245,18 @@ $(".nav-tabs li").eq(5).removeClass("active");
               </tbody>
             </table>
           </div>
+          <div ng-init="stopDisplay = false;">
+          <div ng-repeat="participant in sprintParticipants">
+          <div  ng-if="!participant.roleName" ng-init="displayInfo = true;">
+
+          </div>
+        </div>
+        <div  ng-if="displayInfo = true;"  class="panel-body">
+          <div    style="margin-top: 15px;" class="alert alert-info" role="alert">
+          Issue(s) has been moved to this project from another project. This is why the role of some member(s) is blank.
+          </div>
+        </div>
+      </div>
         </div>
       </div>
     </div>
