--- a/src/main/resources/assets/frontend/index.html
+++ b/src/main/resources/assets/frontend/index.html
@@ -33,7 +33,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.1.6/angular-material.min.js"></script>
   <script src="//rawgit.com/christopherthielen/ui-router-extras/0.0.13/release/ct-ui-router-extras.js"></script>
   <script src="js/moment.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script>
+  <script src="js/Chart.js"></script>
   <script src="js/angular-dragdrop.min.js"></script>
   <script src="js/rzslider.js"></script>
   <script src="js/angular-base64.js"></script>
