updated projectleader name display on project participants page

--- a/src/main/resources/assets/frontend/project/participants.html
+++ b/src/main/resources/assets/frontend/project/participants.html
@@ -59,7 +59,7 @@ select > option{ font-size:17px; }
             <tr>
               <td colspan="2" >
                 <label  for="textinput">Project lead</label>
-                <input type="text" ng-cloak  class="form-control" id="projectLeader" name="projectLeader" placeholder="Project leader"  ng-model="finalProject.projectLeader" readonly>
+                <input type="text" ng-cloak  class="form-control" id="projectLeader" name="projectLeader" placeholder="Project leader"  ng-model="finalProject.projectLeaderName" readonly>
               </td>
             </tr>
             <tr>
