--- a/src/main/resources/assets/frontend/project/editProjectParticipants.html
+++ b/src/main/resources/assets/frontend/project/editProjectParticipants.html
@@ -59,8 +59,7 @@ select > option{ font-size:17px; }
             <tr>
               <td colspan="2" >
                 <label  for="textinput">Project lead</label>
-                <input type="text" ng-cloak  class="form-control" id="projectLeader" name="projectLeader" placeholder="Project leader" ng-repeat="person in peopleList"  ng-if="person.personId == finalProject.projectLeader"  ng-model="person.personName" readonly>
-                <input type="text" ng-cloak  class="form-control" id="projectLeader" name="projectLeader" placeholder="Project leader"  ng-if="!finalProject.projectLeader"  ng-model="finalProject.projectLeader" readonly>
+                <input type="text" ng-cloak  class="form-control" id="projectLeader" name="projectLeader" placeholder="Project leader"  ng-model="finalProject.projectLeaderName" readonly>
               </td>
             </tr>
             <tr>
