updated text on options page

--- a/src/main/resources/assets/frontend/user/options.html
+++ b/src/main/resources/assets/frontend/user/options.html
@@ -8,21 +8,21 @@
   <md-whiteframe class="md-whiteframe-18dp"  layout layout-align="center center">
     <div class="col-md-8" style="align-self: normal; margin-top: 20px;" >
       <span>
-        <label class="col-sm-3 control-label" style="height: 60px;margin-bottom: 0px;" >Add new projects
+        <label class="col-sm-3 control-label" style="height: 60px;margin-bottom: 0px;" >Adding new projects
           <i style="margin-left: 10px;" class="glyphicon glyphicon-info-sign control-label">
             <md-tooltip  md-direction="top"> This option allows a user to create new projects on Redmine</md-tooltip>
           </i>
         </label>
       </span>
       <span>
-        <label class="col-sm-3 control-label"  style="height: 60px;margin-bottom: 0px;">Add new sprints
+        <label class="col-sm-3 control-label"  style="height: 60px;margin-bottom: 0px;">Adding new sprints
           <i style="margin-left: 10px;" class="glyphicon glyphicon-info-sign control-label">
             <md-tooltip  md-direction="top"> This option allows a user to create new sprints on Redmine</md-tooltip>
           </i>
         </label>
       </span>
       <span>
-        <label class="col-sm-3 control-label"  style="height: 60px;margin-bottom: 0px;" >Add new people
+        <label class="col-sm-3 control-label"  style="height: 60px;margin-bottom: 0px;" >Adding new people
           <i style="margin-left: 10px;" class="glyphicon glyphicon-info-sign control-label">
             <md-tooltip  md-direction="top"> This option allows a user to add new people to Redmine</md-tooltip>
           </i>
