--- a/src/main/resources/assets/frontend/repositories/editSkillRepo.html
+++ b/src/main/resources/assets/frontend/repositories/editSkillRepo.html
@@ -20,7 +20,7 @@
   <div class="col-md-12" style="padding-left: 0px; padding-right: 0px;">
     <div class="panel panel-default-table panel-table" style="margin-bottom: 0px;">
       <div class="panel-heading">
-        <input ng-if="programmingSkillsList.length != 0" type="text" style="margin-top: 10px;" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter skill"/>
+        <input  type="text" style="margin-top: 10px;" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter skill"/>
         <div class="pull-right">
           <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body"></span>
         </div>
@@ -53,7 +53,7 @@
               <tr ng-if="programmingSkillsList.length == 0">
                 <td colspan="5">
                   <div style="margin-top: 15px;" class="alert alert-info" role="alert">
-                    <strong>Info: </strong> No skills added yet! You can add new skills while creating a person's profile or editing an exisiting person's details.
+                    <strong>Info: </strong> No skills added yet!
                   </div>
                 </td>
               </tr>
