--- a/src/main/resources/assets/frontend/sprints/sprintParticipants.html
+++ b/src/main/resources/assets/frontend/sprints/sprintParticipants.html
@@ -8,8 +8,6 @@
   transition: .5s ease all;
   height: calc(100% - 150px);
 }
-
-
 select > option{ font-size:17px; }
 .list-group {
   margin-bottom: 0px;
@@ -189,17 +187,16 @@ $(".nav-tabs li").eq(5).removeClass("active");
         <strong>People</strong>
       </div>
       <div class="list-group-item">Select Role:
-        <select ng-model="selectedRole" ng-cloak ng-change="filterPeople(selectedRole)"> <option ng-repeat="role in rolesList | orderBy:'roleName'"   value= {{role.roleName}}> {{role.roleName}} </option></select>
+        <select ng-model="selectedRole" ng-cloak ng-change="filterPeople(selectedRole)"> <option ng-repeat="role in rolesList"   value= {{role.roleName}}> {{role.roleName}} </option></select>
       </div>
       <div style="max-height:23vh;overflow-x:hidden;overflow-y:auto;">
-        <input type="text" style="margin-top: 10px;" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter People" ng-model="searchPerson"/>
         <div   ng-if="item.roleName == selectedRole && show" ng-cloak class="" ng-repeat="item in rolesOfPeople"  class="btn btn-block btn-droppable list-group-item" data-drop="true" data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=peopleList])'}"  jqyoui-droppable="{index: {{$index}}}" >
-          <div ng-if="item.roleName == selectedRole" style = "display: inline-flex;padding: 5px 10px;margin-bottom: 2px;" class="btn btn-block list-group-item" ng-repeat="person in peopleList | orderBy:'personName' " ng-click="showGraph(person);" ng-show="person.personId == item.personId">
+          <div ng-if="item.roleName == selectedRole" style = "display: inline-flex;padding: 5px 10px;margin-bottom: 2px;" class="btn btn-block list-group-item" ng-repeat="person in peopleList" ng-click="showGraph(person);" ng-show="person.personId == item.personId" ng-model='peopleList'>
             <div style="margin-left: 0; width: 4%; text-align: left;display: inline-flex;" ng-show="person.personId == item.personId">
               <md-checkbox type="checkbox" name="selectedDomains" style="margin-bottom: 8px;" class="md-primary" ng-model="formData.selected[person.personId]" ng-change="optionToggled()">
               </div>
               <div style="margin-left: 5px;display: inline-flex;width: 100%;z-index:100;" ng-if="person.personId == item.personId"  ng-show="person.personId == item.personId" ng-cloak  ng-init="person.roleName= selectedRole" class="btn btn-default btn-block btn-draggable" data-drag="{{true}}" data-jqyoui-options="{revert: 'invalid',helper:'clone',appendTo:'.selectedPeople',containment:'document',scroll:'false',onDrop: addBack(peopleList)}" ng-model="peopleList" jqyoui-draggable="{index: {{$index}},placeholder:true,animate:false}" ng-hide="!person.personName">
-                <table style="width: 100%" id="dev-table">
+                <table style="width: 100%">
                   <thead>
                     <tr>
                       <th>Name
@@ -235,7 +232,7 @@ $(".nav-tabs li").eq(5).removeClass("active");
                         </span>
                       </td>
                       <td>
-                        <span style="display: table-row;" ng-repeat="personProject in person.projects  | orderBy:'sprintName'">
+                        <span style="display: table-row;" ng-repeat="personProject in person.projects">
                           <ul ng-repeat="personSprints in personProject.sprints">
                             {{personSprints.sprintName}}
                           </ul>
@@ -247,7 +244,7 @@ $(".nav-tabs li").eq(5).removeClass("active");
                         </span>
                       </td>
                       <td>
-                        <span style="display:  table-row;" ng-repeat="personProject in person.projects  | orderBy:'sprintName'">
+                        <span style="display:  table-row;" ng-repeat="personProject in person.projects">
                           <ul ng-repeat="personSprints in personProject.sprints">
                             {{personSprints.numberofIssues}}
                           </ul>
