removed disabled icon tab after drag and drop

--- a/src/main/resources/assets/frontend/sprints/sprintParticipants.html
+++ b/src/main/resources/assets/frontend/sprints/sprintParticipants.html
@@ -52,6 +52,9 @@ canvas { background:#fff; }
 .md-button.md-default-theme.md-primary.md-fab:not([disabled]).md-focused, .md-button.md-primary.md-fab:not([disabled]).md-focused,.md-button.md-default-theme.md-primary.md-fab:not([disabled]):hover, .md-button.md-primary.md-fab:not([disabled]):hover,.md-button.md-default-theme.md-primary.md-raised:not([disabled]).md-focused, .md-button.md-primary.md-raised:not([disabled]).md-focused,.md-button.md-default-theme.md-primary.md-raised:not([disabled]):hover, .md-button.md-primary.md-raised:not([disabled]):hover {
   background-color: rgb(90, 132, 187);
 }
+.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled {
+opacity: 1;
+}
 </style>
 <script>
 $(".nav-tabs li").eq(3).addClass("active");
