--- a/src/main/resources/assets/frontend/sprints/editPeopleToIssues.html
+++ b/src/main/resources/assets/frontend/sprints/editPeopleToIssues.html
@@ -40,6 +40,9 @@ canvas { background:#fff; }
 .dropdown.dropdown-lg .dropdown-menu {
   min-width: 100%;
 }
+.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled {
+opacity: 1;
+}
 </style>
 <script>
 $(".nav-tabs li").eq(4).addClass("active");
