--- a/src/main/resources/assets/frontend/project/projectsTable.html
+++ b/src/main/resources/assets/frontend/project/projectsTable.html
@@ -2,8 +2,11 @@
   p {
     display: inline;
   }
-  .rTableRow:hover {
+  .rTableRow {
     background-color: #f5f5f5;
+  }
+  .rTableRow:hover {
+    background-color: white;
   }
   .panel-group {
     margin-bottom: 3px;
@@ -19,7 +22,7 @@
           <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body"></span>
         </div>
       </div>
-      <div class="panel-body project-table-responsive">
+      <div class="panel-body project-table-responsive" >
         <md-whiteframe class="md-whiteframe-24dp"  layout layout-align="center center">
           <table class="table table-hover" id="dev-table">
             <thead>
@@ -56,7 +59,7 @@
                 <td>{{project.projectLeader | capitalize }}</td>
                 <td>
                   <accordion  ng-if="project.sprints.length !=0">
-                    <accordion-group is-open="project.isOpen"  style="width: 80%;"  >
+                    <accordion-group is-open="project.isOpen"  style="width: 80%;background-color: #f5f5f5;">
                       <accordion-heading >
                         <i class="glyphicon-plus" ng-show= "!project.isOpen"style=" font-style: inherit;">  <md-tooltip md-direction="top"> Click to view sprints in the project {{project.projectName  | capitalize}}</md-tooltip>Sprints in {{project.projectName | capitalize }} </i>
                         <i class="glyphicon-minus" ng-hide= "!project.isOpen" style=" font-style: inherit;">  <md-tooltip md-direction="top"> Click to view sprints in the project {{project.projectName  | capitalize}}</md-tooltip>Sprints in {{project.projectName | capitalize }} </i>
@@ -67,7 +70,7 @@
                           <div class="rTableHead"><strong>Sprint Name</strong></div>
                         </div>
                         <div class="rTableRow" ng-repeat="sprint in project.sprints | orderBy:'sprintName'" >
-                          <div class="rTableCell">{{sprint.sprintName | capitalize}}</div>
+                          <div ng-click="manageSprint(project.projectId, sprint.sprintId)" class="rTableCell">{{sprint.sprintName | capitalize}}</div>
                         </div>
                       </div>
                     </accordion-group>
